chore: Fix SimplePluginAnnotationParser unable to parse package private listeners + Added javadoc